--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,35 @@
 
 .logo{    
         position: absolute;
-        top: 2px; 
-        left: 1px; 
-        background: linear-gradient(to right, rgba(0, 0, 0, 0.548), #1a1a1a7a, rgba(0, 0, 0, 0.483));
+        top: 0px; 
+        left: 0px; 
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.89), #1a1a1a97, rgba(0, 0, 0, 0.019));
         z-index: 10;
+        width: 100vw;
+        display: flex;
+        justify-content: space-between;
     }
+.user_icon{
+    display: flex;
+    padding: 34px;
+    margin-right: 24px;
+    width: 40px;
+    height: 40px;
+}
+.user_b{
+    height: 20px;
+    width: 60px;
+    margin-top: 10px;
+    margin-left: 1px;
+    border-radius: 10px;
+    white-space: nowrap;
+}
 .form_one{
     position: absolute;
     padding: 24px;
     background-color: black;
     opacity: 0.8;
-    height: 380px;
+    height: 400px;
     width: 300px;
     display: grid;
     margin-top: 150px;
@@ -35,7 +53,7 @@
     width: 280px;
     background-color: #d3d3d3;
     color: black;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
 }
 
 .box_one{
@@ -45,7 +63,7 @@
     width: 280px;
     background-color: #d3d3d3;
     color: black;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
 }
 
 .box_two{
@@ -80,5 +98,8 @@
     font-size: 14px;
     text-align: center;
     cursor: pointer;
+}
+.message {
+    color: red;
 }
 
