--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,14 @@
     }
 .user_icon{
     display: flex;
-    padding: 34px;
+    padding: 48px;
     margin-right: 24px;
     width: 40px;
     height: 40px;
+}
+.user_i{
+    border-radius: 3px;
+    padding: 4px;
 }
 .user_b{
     height: 20px;
@@ -102,4 +106,51 @@
 .message {
     color: red;
 }
+.movie{
+    padding-top: 220px;
+    padding-left: 64px;
+    position: absolute;
+    color: #848482;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.89), #1a1a1a97, rgba(0, 0, 0, 0.019));
 
+    
+}
+.title{
+    font-size: 50px;
+}
+.content{
+    width: 25%;
+    font-size: 18px;
+}
+.play{
+    width: 128px;
+    height: 48px;
+    background-color: whitesmoke;
+    border: whitesmoke;
+    color: black;
+    font-size: 18px;
+    border-radius: 8px;
+
+}
+.play:hover{
+    opacity: 0.6;
+}
+.more_info{
+    width: 128px;
+    height: 48px;
+    background-color: #91a3b0;
+    border: #91a3b0;
+    font-size: 18px;
+    border-radius: 8px;
+    margin: 4px;
+
+}
+.more_info:hover{
+    opacity: 0.6;
+}
+.screen{
+    width: 100vw;
+    aspect-ratio: 16/9;
+    height: auto;
+    
+}
